examples/type_system/failing/27_adt_wildcard_guard_not_catchall.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/27_adt_wildcard_guard_not_catchall.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 2 missing patterns.
//
//   examples/type_system/failing/27_adt_wildcard_guard_not_catchall.flx:32:5
//    |
// 32 |     match c {
//    |     ^^^^^^^^^
// 33 |         _ if true -> 1,
//    | ^^^^^^^^^^^^^^^^^^^^^^^
// 34 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

// E083: wildcard with guard is not an unconditional catch-all.

data Color {
    Red,
    Blue,
}

fn classify(c: Color) -> Int {
    match c {
        _ if true -> 1,
    }
}

fn main() {
    classify(Red)
}
